:sparkles: Added Carousel Side Buttons

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
     <link rel="stylesheet" href="css/style.css">
 
     <title>StackEd</title>
@@ -15,8 +16,8 @@
 
 <body>
     <div class="loader-wrapper">
-		<span class="loader"><span class="loader-inner"></span></span>
-	</div>
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
 
     <header>
         <div class="wrapper">
@@ -35,7 +36,7 @@
         </div>
 
         <div class="hero-text-box">
-            <h1 class="hero-text-box-header">Create completely trustable <br> Academic claims & credentials <br>
+            <h1 class="hero-text-box-header">Create completely trustable <br> academic claims & credentials <br>
                 with our blockchain solution</h1>
             <p class="hero-text-box-para">It’s time to move your paper-based credentials digital. Whether you’re <br>
                 issuing, verifying or presenting a credential, with StackEd, you know <br> you it’s going to be
@@ -51,7 +52,7 @@
         </div>
     </header>
 
-<!----------------------- How Does It Works Section ------------------------------->
+    <!----------------------- How Does It Works Section ------------------------------->
     <section id="about">
         <div class="container">
             <div class="sign-header-div">
@@ -102,7 +103,7 @@
         </div>
     </section>
 
-<!-------------------------- Imagine Section ----------------------------------->
+    <!-------------------------- Imagine Section ----------------------------------->
 
     <section class="imagine">
 
@@ -115,7 +116,10 @@
                 <div class="imagine-line-bar"></div>
             </div>
             <div class="sign-para-div">
-                <p class="imagine-para">The following scenario: A student: Lily, is applying for university, with traditional processes, the university can either choose to <br> believe Hermione’s claim/paper graduation certificate or they can contact the school to verify. The StackEd upgrade illustrated <br> below improves trust, privacy and efficiency for this process.
+                <p class="imagine-para">The following scenario: A student: Lily, is applying for university, with
+                    traditional processes, the university can either choose to <br> believe Hermione’s claim/paper
+                    graduation certificate or they can contact the school to verify. The StackEd upgrade illustrated
+                    <br> below improves trust, privacy and efficiency for this process.
                 </p>
             </div>
 
@@ -123,34 +127,38 @@
                 <div class="col imagine-card-common">
                     <div class="row imagine-card-issuer">
                         <img src="images/Issuer.png" alt="" srcset=""
-                                    class="img-fluid rounded mx-auto d-block mt-5 issuer-img">
+                            class="img-fluid rounded mx-auto d-block mt-5 issuer-img">
                     </div>
                     <div class="row imagine-cards-first">
                         <h3 class="imagine-cards-head">Local High School</h3>
                         <h5 class="imagine-cards-sub">Issuer</h5>
-                        <p class="imagine-cards-para">Hermione just graduated from Local <br> High School. She is issued a <br> graduation certificate as a digital <br> credential through StackEd</p>
+                        <p class="imagine-cards-para">Hermione just graduated from Local <br> High School. She is issued
+                            a <br> graduation certificate as a digital <br> credential through StackEd</p>
                     </div>
                 </div>
                 <div class="col imagine-card-common-1">
                     <div class="row imagine-card-issuer">
                         <img src="images/Holder.png" alt="" srcset=""
-                                    class="img-fluid rounded mx-auto d-block mt-4 holder-img">
+                            class="img-fluid rounded mx-auto d-block mt-4 holder-img">
                     </div>
                     <div class="row imagine-cards-first">
                         <h3 class="imagine-cards-head">Hermione</h3>
                         <h5 class="imagine-cards-sub">Holder</h5>
-                        <p class="imagine-cards-para">Hermione stores the Local High <br> School graduation certificate in her <br> StackEd wallet among her other digital <br> credentials</p>
+                        <p class="imagine-cards-para">Hermione stores the Local High <br> School graduation certificate
+                            in her <br> StackEd wallet among her other digital <br> credentials</p>
                     </div>
                 </div>
                 <div class="col imagine-card-common-2">
                     <div class="row imagine-card-issuer">
                         <img src="images/Verifier.png" alt="" srcset=""
-                                    class="img-fluid rounded mx-auto d-block mt-5 verifier-img">
+                            class="img-fluid rounded mx-auto d-block mt-5 verifier-img">
                     </div>
                     <div class="row imagine-cards-first">
                         <h3 class="imagine-cards-head">Hogwarts University</h3>
                         <h5 class="imagine-cards-sub">Verifier</h5>
-                        <p class="imagine-cards-para">Hogwarts requires high school <br> graduation, so they request for <br> Hermione’s digital graduation <br> certificate through StackEd</p>
+                        <p class="imagine-cards-para">Hogwarts requires high school <br> graduation, so they request for
+                            <br> Hermione’s digital graduation <br> certificate through StackEd
+                        </p>
                     </div>
                 </div>
 
@@ -159,7 +167,7 @@
 
     </section>
 
-<!-------------------------Sign Up Section----------------------------------->
+    <!-------------------------Sign Up Section----------------------------------->
     <section id="sign-up">
         <div class="container">
             <div class="sign-header-div">
@@ -174,8 +182,16 @@
                     registration process</p>
             </div>
             <div class="row">
-                <div class="col"></div>
-                <div class="col">
+                <div class="col-1 carousel-side-btn-holder">
+                    <svg id="side-btn-left" class="carousel-side-btn" width="50" height="50" viewBox="0 0 40 40"
+                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="20" cy="20" r="20" transform="rotate(-180 20 20)" fill="#39A2DB" />
+                        <path
+                            d="M13.2727 18.9393C12.6869 19.5251 12.6869 20.4749 13.2727 21.0607L22.8186 30.6066C23.4044 31.1924 24.3541 31.1924 24.9399 30.6066C25.5257 30.0208 25.5257 29.0711 24.9399 28.4853L16.4546 20L24.9399 11.5147C25.5257 10.9289 25.5257 9.97919 24.9399 9.3934C24.3541 8.80761 23.4044 8.80761 22.8186 9.3934L13.2727 18.9393ZM16.5555 18.5H14.3333V21.5H16.5555V18.5Z"
+                            fill="white" />
+                    </svg>
+                </div>
+                <div class="col-10">
                     <div id="cr" class="card-carousel">
 
                         <div id="c-1" class="my-card posx-1 prev">
@@ -224,7 +240,15 @@
 
                     </div>
                 </div>
-                <div class="col"></div>
+                <div class="col-1 carousel-side-btn-holder">
+                    <svg id="side-btn-right" class="carousel-side-btn" width="50" height="50" viewBox="0 0 40 40"
+                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="20" cy="20" r="20" fill="#39A2DB" />
+                        <path
+                            d="M26.7273 21.0607C27.3131 20.4749 27.3131 19.5251 26.7273 18.9393L17.1814 9.3934C16.5956 8.80761 15.6458 8.80761 15.0601 9.3934C14.4743 9.97919 14.4743 10.9289 15.0601 11.5147L23.5453 20L15.0601 28.4853C14.4743 29.0711 14.4743 30.0208 15.0601 30.6066C15.6458 31.1924 16.5956 31.1924 17.1814 30.6066L26.7273 21.0607ZM23.4444 21.5H25.6667V18.5H23.4444V21.5Z"
+                            fill="white" />
+                    </svg>
+                </div>
 
             </div>
 
@@ -238,7 +262,7 @@
         </div>
     </section>
 
-<!---------------------------------- Footer Section ------------------------------------------>    
+    <!---------------------------------- Footer Section ------------------------------------------>
     <footer>
         <div class="footer-main">
             <div class="footer-left">
@@ -255,7 +279,7 @@
                 </ul>
             </div>
         </div>
-            <div class="footer-line-bar"></div>
+        <div class="footer-line-bar"></div>
 
         <div class="footer-last">
             <div class="footer-left">
@@ -269,7 +293,7 @@
                     <li class="footer-last-pad-2">Terms & Conditions</li>
                 </ul>
             </div>
-        </div> 
+        </div>
     </footer>
 
 
@@ -278,8 +302,12 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 
     <script src="js/header.js"></script>
     <script src="js/index.js"></script>
