:sparkles: Added Trig Animation

--- a/index.html
+++ b/index.html
@@ -68,7 +68,95 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col"></div>
+                <div class="col">
+                    <div
+                        style="width: 400px; height: 570px; background: linear-gradient(90deg, rgba(255, 255, 255, 0.575) 54.17%, rgba(255, 255, 255, 0) 100%); position: absolute; z-index: 100;">
+                    </div>
+                    <svg id="trust-trig-image" class="issuer-state overlay-left" width="557" height="502"
+                        viewBox="0 0 557 502" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle opacity="0.7" cx="305.479" cy="250.81" r="182.5"
+                            transform="rotate(-0.185882 305.479 250.81)" stroke="#E8F0F2" stroke-width="3" />
+                        <circle cx="305.479" cy="250.81" r="249" transform="rotate(-0.185882 305.479 250.81)"
+                            stroke="#FAFAFA" stroke-width="2" />
+                        <circle opacity="0.4" cx="428.774" cy="33.4086" r="19.5"
+                            transform="rotate(-0.185882 428.774 33.4086)" stroke="#E8F0F2" stroke-width="3" />
+                        <circle cx="428.774" cy="33.4086" r="32" transform="rotate(-0.185882 428.774 33.4086)"
+                            stroke="#FAFAFA" stroke-width="2" />
+                        <circle opacity="0.4" cx="442.149" cy="457.367" r="19.5"
+                            transform="rotate(-0.185882 442.149 457.367)" stroke="#E8F0F2" stroke-width="3" />
+                        <circle cx="442.149" cy="457.367" r="39" transform="rotate(-0.185882 442.149 457.367)"
+                            stroke="#FAFAFA" stroke-width="2" />
+                        <circle opacity="0.4" cx="55.4799" cy="251.621" r="19.5"
+                            transform="rotate(-0.185882 55.4799 251.621)" stroke="#E8F0F2" stroke-width="3" />
+                        <circle cx="55.4798" cy="251.621" r="53" transform="rotate(-0.185882 55.4798 251.621)"
+                            stroke="#FAFAFA" stroke-width="2" />
+                        <g filter="url(#filter0_d)">
+                            <ellipse cx="487.848" cy="250.326" rx="31.9332" ry="31.9332"
+                                transform="rotate(89.8141 487.848 250.326)" fill="#39A2DB" />
+                        </g>
+                        <path id="trig-h" transform="rotate(240 487.848 250.326)"
+                            d="M474.693 238.129L483.306 238.129L483.306 239.623L480.617 240.028L480.617 250.065L495.294 250.065L495.294 240.028L492.623 239.623L492.623 238.129L501.236 238.129L501.236 239.623L498.582 240.028L498.582 262.739L501.236 263.143L501.236 264.637L492.623 264.637L492.623 263.143L495.294 262.739L495.294 252.174L480.617 252.174L480.617 262.739L483.306 263.143L483.306 264.637L474.693 264.637L474.693 263.143L477.365 262.739L477.365 240.028L474.693 239.623L474.693 238.129Z"
+                            fill="white" />
+                        <g filter="url(#filter1_d)">
+                            <ellipse cx="215.569" cy="411.809" rx="31.9332" ry="31.9332"
+                                transform="rotate(89.8141 215.569 411.809)" fill="#A2DBFA" />
+                        </g>
+                        <path id="trig-v" transform="rotate(240 215.569 411.809)"
+                            d="M216.04 423.152L224.091 402.884L221.472 402.48L221.472 400.986L228.398 400.986L228.398 402.48L226.411 402.814L216.62 427.494L214.722 427.494L204.615 402.884L202.523 402.48L202.523 400.986L210.661 400.986L210.661 402.48L207.954 402.884L216.04 423.152Z"
+                            fill="white" />
+                        <g filter="url(#filter2_d)">
+                            <ellipse cx="213.726" cy="92.593" rx="31.9332" ry="31.9332"
+                                transform="rotate(89.8141 213.726 92.593)" fill="#053742" />
+                        </g>
+                        <path id="trig-i" transform="rotate(240 213.726 92.593)"
+                            d="M209.42 80.7535L218.034 80.7535L218.034 82.2477L215.379 82.652L215.379 105.363L218.034 105.767L218.034 107.261L209.42 107.261L209.42 105.767L212.127 105.363L212.127 82.652L209.42 82.2477L209.42 80.7535Z"
+                            fill="white" />
+                        <path
+                            d="M265.534 114.796L268.743 126.616L280.562 123.408L277.354 111.588L265.534 114.796ZM446.802 218.669L443.594 206.849L431.774 210.057L434.982 221.877L446.802 218.669ZM272.303 120.404L438.542 215.664L440.034 213.061L273.794 117.801L272.303 120.404Z"
+                            fill="black" />
+                        <path
+                            d="M445.819 283.423L433.979 280.292L430.847 292.132L442.688 295.264L445.819 283.423ZM265.229 388.47L277.069 391.601L280.201 379.761L268.361 376.629L265.229 388.47ZM437.579 286.481L271.961 382.819L273.469 385.412L439.087 289.074L437.579 286.481Z"
+                            fill="black" />
+                        <path
+                            d="M210.896 146.434L202.263 155.122L210.952 163.755L219.584 155.066L210.896 146.434ZM211.573 355.353L220.205 346.664L211.517 338.032L202.885 346.721L211.573 355.353ZM209.424 155.099L210.045 346.697L213.045 346.688L212.424 155.089L209.424 155.099Z"
+                            fill="black" />
+                        <defs>
+                            <filter id="filter0_d" x="455.915" y="218.393" width="71.8664" height="71.8664"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dx="4" dy="4" />
+                                <feGaussianBlur stdDeviation="2" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                            </filter>
+                            <filter id="filter1_d" x="183.636" y="379.876" width="71.8664" height="71.8665"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dx="4" dy="4" />
+                                <feGaussianBlur stdDeviation="2" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                            </filter>
+                            <filter id="filter2_d" x="181.793" y="60.6598" width="71.8664" height="71.8664"
+                                filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix"
+                                    values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dx="4" dy="4" />
+                                <feGaussianBlur stdDeviation="2" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                            </filter>
+                        </defs>
+                    </svg>
+                </div>
                 <div class="col">
                     <div class="row">
                         <ul class="holder-nav">
