:iphone: made header section responsive

--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
             </nav>
         </div>
 
-        <div class="hero-text-box">
-            <h1 class="hero-text-box-header">Create completely trustable <br> academic claims & credentials <br>
-                with our blockchain solution</h1>
-            <p class="hero-text-box-para">It’s time to move your paper-based credentials digital. Whether you’re <br>
+        <div class="mx-3 mx-lg-5">
+            <h1 class="mx-3 mx-lg-5 mt-5 hero-text-box-header">
+                Create completely trustable <br> academic claims & credentials <br> with our blockchain solution
+            </h1>
+            <p class="mx-3 mx-lg-5 hero-text-box-para">It’s time to move your paper-based credentials digital. Whether you’re <br>
                 issuing, verifying or presenting a credential, with StackEd, you know <br> you it’s going to be
                 100% unhackable, trustable and accessible.</p>
         </div>
 
-        <div class="header-sign-btn">
-            <a class="header-sign-anchor btn" href="#sign-up">Sign Up</a>
+        <div class="row mt-5">
+            <div class="col col-12 text-center mt-lg-5">
+                <a class="header-sign-anchor btn mt-lg-5" href="#sign-up">Sign Up</a>
+            </div>
         </div>
 
         <div class="hero-shape">
@@ -68,7 +71,7 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col col-12 col-lg-6">
                     <div
                         style="width: 400px; height: 570px; background: linear-gradient(90deg, rgba(255, 255, 255, 0.575) 54.17%, rgba(255, 255, 255, 0) 100%); position: absolute; z-index: 100;">
                     </div>
@@ -157,14 +160,12 @@
                         </defs>
                     </svg>
                 </div>
-                <div class="col">
-                    <div class="row">
-                        <ul class="holder-nav">
-                            <li><a id="button-issuer" class="holder-nav-button holder-nav-enable">Issuer</a></li>
-                            <li><a id="button-holder" class="holder-nav-button">Holder</a></li>
-                            <li><a id="button-verifier" class="holder-nav-button">Verifier</a></li>
-                        </ul>
-                    </div>
+                <div class="col col-12 col-lg-6">
+                    <ul class="holder-nav">
+                        <li><a id="button-issuer" class="holder-nav-button holder-nav-enable">Issuer</a></li>
+                        <li><a id="button-holder" class="holder-nav-button">Holder</a></li>
+                        <li><a id="button-verifier" class="holder-nav-button">Verifier</a></li>
+                    </ul>
                     <div class="row sign-main">
                         <div class="sign-issuer sign-all">I</div>
                         <div class="line-display">
