:sparkles: changed Hermione to Lily in all instances. Updated some text according to figma.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 Create completely trustable <br> academic claims & credentials <br> with our blockchain solution
             </h1>
             <p class="mx-3 mx-lg-5 hero-text-box-para">It’s time to move your paper-based credentials digital. Whether you’re <br>
-                issuing, verifying or presenting a credential, with StackEd, you know <br> you it’s going to be
+                issuing, verifying or presenting a credential, with StackEd, you know <br> it’s going to be
                 100% unhackable, trustable and accessible.</p>
         </div>
 
@@ -197,56 +197,58 @@
     <section class="imagine">
 
         <div class="container">
-            <div class="sign-header-div">
+            <div class="text-center">
                 <h1 class="imagine-header">Imagine</h1>
             </div>
 
-            <div class="row">
-                <div class="imagine-line-bar"></div>
-            </div>
+            <div class="imagine-line-bar"></div>
+
             <div class="sign-para-div">
-                <p class="imagine-para">The following scenario: A student: Lily, is applying for university, with
-                    traditional processes, the university can either choose to <br> believe Hermione’s claim/paper
+                <p class="imagine-para mx-4 mx-lg-0">
+                    The following scenario: A student: Lily, is applying for university, with
+                    traditional processes, the university can either choose to <br> believe Lily’s claim/paper
                     graduation certificate or they can contact the school to verify. The StackEd upgrade illustrated
                     <br> below improves trust, privacy and efficiency for this process.
                 </p>
             </div>
 
             <div class="row imagine-cards">
-                <div class="col imagine-card-common">
-                    <div class="row imagine-card-issuer">
+                <div class="col col-8 col-lg-3 mx-auto ml-auto mr-lg-2 mt-3 imagine-card-common">
+                    <div class="imagine-card-issuer">
                         <img src="images/Issuer.png" alt="" srcset=""
-                            class="img-fluid rounded mx-auto d-block mt-5 issuer-img">
+                            class="img-fluid rounded mx-auto d-block mt-2 mt-lg-5 issuer-img">
                     </div>
-                    <div class="row imagine-cards-first">
+                    <div class="imagine-cards-first">
                         <h3 class="imagine-cards-head">Local High School</h3>
                         <h5 class="imagine-cards-sub">Issuer</h5>
-                        <p class="imagine-cards-para">Hermione just graduated from Local <br> High School. She is issued
-                            a <br> graduation certificate as a digital <br> credential through StackEd</p>
+                        <p class="imagine-cards-para">
+                            Lily just graduated from Local High School. She is issued
+                            a graduation certificate as a digital credential through StackEd
+                        </p>
                     </div>
                 </div>
-                <div class="col imagine-card-common-1">
-                    <div class="row imagine-card-issuer">
+                <div class="col col-8 col-lg-4 mx-auto mt-4 my-lg-0 imagine-card-common-1">
+                    <div class="imagine-card-issuer">
                         <img src="images/Holder.png" alt="" srcset=""
-                            class="img-fluid rounded mx-auto d-block mt-4 holder-img">
+                            class="img-fluid rounded mx-auto d-block mt-3 mt-lg-4 imagine-holder-img">
                     </div>
-                    <div class="row imagine-cards-first">
-                        <h3 class="imagine-cards-head">Hermione</h3>
+                    <div class="text-center">
+                        <h3 class="imagine-cards-head">Lily</h3>
                         <h5 class="imagine-cards-sub">Holder</h5>
-                        <p class="imagine-cards-para">Hermione stores the Local High <br> School graduation certificate
-                            in her <br> StackEd wallet among her other digital <br> credentials</p>
+                        <p class="imagine-cards-para px-4">Lily stores the Local High School graduation certificate
+                            in her StackEd wallet among her other digital credentials</p>
                     </div>
                 </div>
-                <div class="col imagine-card-common-2">
-                    <div class="row imagine-card-issuer">
+                <div class="col col-8 col-lg-3 mx-auto mr-auto ml-lg-2 mt-3 imagine-card-common-2">
+                    <div class="imagine-card-issuer">
                         <img src="images/Verifier.png" alt="" srcset=""
-                            class="img-fluid rounded mx-auto d-block mt-5 verifier-img">
+                            class="img-fluid rounded mx-auto d-block mt-3 mt-lg-4 imagine-verifier-img">
                     </div>
-                    <div class="row imagine-cards-first">
+                    <div class="imagine-cards-first">
                         <h3 class="imagine-cards-head">Hogwarts University</h3>
                         <h5 class="imagine-cards-sub">Verifier</h5>
                         <p class="imagine-cards-para">Hogwarts requires high school <br> graduation, so they request for
-                            <br> Hermione’s digital graduation <br> certificate through StackEd
+                            <br> Lily’s digital graduation <br> certificate through StackEd
                         </p>
                     </div>
                 </div>
@@ -286,7 +288,7 @@
                         <div id="c-1" class="my-card posx-1 prev">
                             <div class="row">
                                 <img src="images/Holder.png" alt="" srcset=""
-                                    class="img-fluid rounded mx-auto d-block mt-5 holder-img">
+                                    class="img-fluid rounded mx-auto d-block mt-4 holder-img">
                             </div>
                             <div class="my-card-header mt-4">
                                 <h5>Holder</h5>
@@ -301,7 +303,7 @@
                         <div id="c-2" class="my-card posx-2 active">
                             <div class="row issuer-row">
                                 <img src="images/Issuer.png" alt="" srcset=""
-                                    class="img-fluid rounded mx-auto d-block mt-5 issuer-img">
+                                    class="img-fluid rounded mx-auto mt-3 d-block issuer-img">
                             </div>
                             <div class="my-card-header header-marg">
                                 <h5>Issuer</h5>
@@ -316,7 +318,7 @@
                         <div id="c-3" class="my-card posx-3 next">
                             <div class="row verifier-row">
                                 <img src="images/Verifier.png" alt="" srcset=""
-                                    class="img-fluid rounded mx-auto d-block mt-5 verifier-img">
+                                    class="img-fluid rounded mx-auto d-block mt-4 verifier-img">
                             </div>
                             <div class="my-card-header header-veri">
                                 <h5>Verifier</h5>
