:iphone: made two sections responsive
"How does it work?" and "Imagine" sections are now responsive.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col col-12 col-lg-6">
+                <div class="how-animation-div col col-lg-6">
                     <div
                         style="width: 400px; height: 570px; background: linear-gradient(90deg, rgba(255, 255, 255, 0.575) 54.17%, rgba(255, 255, 255, 0) 100%); position: absolute; z-index: 100;">
                     </div>
@@ -166,7 +166,7 @@
                         <li><a id="button-holder" class="holder-nav-button">Holder</a></li>
                         <li><a id="button-verifier" class="holder-nav-button">Verifier</a></li>
                     </ul>
-                    <div class="row sign-main">
+                    <div class="row sign-main py-3 px-5">
                         <div class="sign-issuer sign-all">I</div>
                         <div class="line-display">
                             <h1 class="sign-header-main">The Issuer</h1>
@@ -174,10 +174,10 @@
                         </div>
                     </div>
                     <div class="row how-para-main">
-                        <p class="how-para">The issuer is an entity or organisation that issues credentials or other
-                            form of claims to individuals.</p>
-
-                        <p class="how-para-1">Example of issuers:</p>
+                        <p class="how-para px-5">
+                            The issuer is an entity or organisation that issues credentials or other form of claims to individuals.
+                        </p>
+                        <p class="how-para-1 px-5">Example of issuers:</p>
                     </div>
                     <div class="row how-list">
                         <dl>
@@ -205,10 +205,7 @@
 
             <div class="sign-para-div">
                 <p class="imagine-para mx-4 mx-lg-0">
-                    The following scenario: A student: Lily, is applying for university, with
-                    traditional processes, the university can either choose to <br> believe Lily’s claim/paper
-                    graduation certificate or they can contact the school to verify. The StackEd upgrade illustrated
-                    <br> below improves trust, privacy and efficiency for this process.
+                    The following scenario: A student: Lily, is applying for university, with traditional processes, the university can either choose to believe Lily’s claim/paper graduation certificate or they can contact the school to verify. The Stacked upgrade illustrated below improves trust, privacy and efficiency for this process.
                 </p>
             </div>
 
@@ -216,7 +213,7 @@
                 <div class="col col-8 col-lg-3 mx-auto ml-auto mr-lg-2 mt-3 imagine-card-common">
                     <div class="imagine-card-issuer">
                         <img src="images/Issuer.png" alt="" srcset=""
-                            class="img-fluid rounded mx-auto d-block mt-2 mt-lg-5 issuer-img">
+                            class="img-fluid rounded mx-auto d-block mt-2 mt-lg-4 issuer-img">
                     </div>
                     <div class="imagine-cards-first">
                         <h3 class="imagine-cards-head">Local High School</h3>
@@ -230,7 +227,7 @@
                 <div class="col col-8 col-lg-4 mx-auto mt-4 my-lg-0 imagine-card-common-1">
                     <div class="imagine-card-issuer">
                         <img src="images/Holder.png" alt="" srcset=""
-                            class="img-fluid rounded mx-auto d-block mt-3 mt-lg-4 imagine-holder-img">
+                            class="img-fluid rounded mx-auto d-block mt-3 mt-lg-3 imagine-holder-img">
                     </div>
                     <div class="text-center">
                         <h3 class="imagine-cards-head">Lily</h3>
